<resources>
    <string name="app_name">OpenMPDDev</string>
    <string name="fragment_name">Main Fragment</string>
    <string name="help">Help</string>
    <string name="download">Download</string>
    <string name="debug">Debug</string>
    <string name="evaluate">Evaluate</string>
    <string name="force_import">Force Import</string>
    <string name="contacts">Contacts</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="monthly_average">Monthly Average</string>
    <string name="twelve_month_average">12 Month Average</string>
    <string name="weighted_average">Weighted Average</string>
    <string name="ongoing_total">Ongoing Total</string>
    <string name="Lists">Lists</string>
    <string name="Show">Show</string>
    <string name="custom_list_title">Custom List: </string>
    <string name="name_list">Name your list</string>
    <string name="delete_list">Delete this list</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly_and_annual">Quarterly &amp; Annual</string>
    <string name="avg_special">Special (Avg)</string>
    <string name="repeating_irregular">Repeating Irregular</string>
    <string name="dropped_support">Dropped Support</string>
    <string name="late_colon">Late</string>
    <string name="lapsed_colon">Lapsed</string>
    <string name="_and_"> and </string>
    <string name="and">and</string>
    <string name="add">Add</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="never">Never</string>
    <string name="partners">Partners</string>
    <string name="data_import">Importing Data</string>
    <string name="giving_summary">Giving Summary</string>
    <string name="partner_summary">Partner Summary</string>
    <string name="gift_history">Gift History</string>
    <string name="clear_data">Clear Data</string>
    <string name="randomise_names">Randomise Contact Data</string>
    <string name="Email">Email</string>
    <string name="Type">Type</string>
    <string name="Address">Address</string>
    <string name="Address_2">Address cont\'d</string>
    <string name="City">City</string>
    <string name="Region">Region</string>
    <string name="PostCode">Postal Code</string>
    <string name="Country">Country</string>
    <string name="add_phone">Add Phone</string>
    <string name="add_email">Add Email</string>
    <string name="add_address">Add Address</string>
    <string name="Phone">Phone</string>
    <string name="Number">Number</string>
    <string name="Notes">Notes</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="Search">Search</string>
    <string name="Filter">Filter</string>
    <string name="All">All</string>
    <string name="Done">Done</string>
    <string name="choose_a_template">Choose A Message Template</string>
    <string name="subject">Subject:</string>
    <string name="send">Send</string>
    <string name="edit_template">Edit Template</string>
    <string name="edit_email_template">Edit Email Template</string>
    <string name="email_body">Email Body:</string>
    <string name="email_subject">Email Subject:</string>
    <string name="template_name">Template Name:</string>
    <string name="save_and_send">Save And Send</string>
    <string name="send_blank">Blank Message</string>
    <string name="new_template">New Template</string>
    <string name="whats_new">What\'s new?</string>
    <string name="thank_you_swipe_away">Thank You! (You can swipe this card away now)</string>
    <string name="welcome">Welcome</string>
    <string name="login">Log in</string>
    <string name="importing">Importing</string>
    <string name="please_select_your_organisation">Please Select Your Organisation</string>
    <string name="accounts">Accounts</string>
    <string name="add_another_or_finish">You can add another account, or finish now.</string>
    <string name="evaluating_contacts">Evaluating contacts</string>
    <string name="importing_contacts">Importing contacts</string>
    <string name="importing_gifts">Importing gifts</string>
    <string name="error_connecting_to_server">Error connecting to server</string>
    <string name="ssl_certificate_error">SSL certificate error</string>
    <string name="done">Done</string>
    <string name="unknown">Unknown</string>
    <string name="none">None</string>
    <string name="onetime">One Time</string>
    <string name="occasional">Occasional</string>
    <string name="frequent">Frequent</string>
    <string name="annual">Annual</string>
    <string name="regular">Regular</string>
    <string name="per_year">/yr</string>
    <string name="per_n_months">/?mo</string>
    <string name="per_month">/mo</string>
    <string name="per_month_average">/mo (avg)</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="dropped">Dropped</string>
    <string name="lapsed">Lapsed</string>
    <string name="late">Late</string>
    <string name="new_">New</string>
    <string name="current">Current</string>
    <string name="last_gift">Last Gift: </string>
    <string name="last_contact">Last Contact: </string>
    <string name="service_provider">Service Provider</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="last_import">Last import: </string>
    <string name="add_account">Add Account</string>
    <string name="add_another_account">Add Another Account</string>
    <string name="getting_started">Getting Started</string>
    <string name="getting_started_body">Welcome to OpenMPD. We\'re here to help decode your financial partnership. The first step is to add your organisation\'s account(s) to import your donor and donation data. Tap \"Add\" to add an account.</string>
    <string name="getting_started_body_2">You can set up multiple accounts. Press \"Add\" to add another, or \"Done\" when you\'re done. You can add more accounts later from the \"Settings\" panel on the left menu.</string>
    <string name="importing_data">Importing Data</string>
    <string name="importing_data_body">Importing and processing your partner data. This can take a few minutes.</string>
    <string name="ssl_cert_error">Bad SSL certicate.</string>
    <string name="ask_add_ssl_exception">This server provided an untrusted SSL certificate. You may ignore it, but this could be dangerous.\n\nNote that the P2C server currently has a known error, so you should be safe to ignore it for focus.powertochange.org.</string>
    <string name="ignore_certificate">Ignore error</string>
    <string name="ignoring_ssl">SSL errors on this server will be ignored in the future.</string>
    <string name="report_success">Successful data import</string>
    <string name="report_success_body">It looks like you\'re using an untested service, which successfully imported your donor data. Please help us make OpenMPD better by sending us a login report. It\'ll take about 20 seconds.</string>
    <string name="summary_card_title">Monthly Average: %s</string>
    <string name="stable_monthly_giving">Stable Monthly Giving:</string>
    <string name="frequent_giving_average">Frequent Giving (avg):</string>
    <string name="late_giving">Late Giving (avg):</string>
    <string name="lapsed_giving">Lapsed Giving (avg):</string>
    <string name="stable_regular_giving">Stable Regular Giving (avg):</string>
    <string name="average_special_giving">Average Monthly Special Gifts:</string>
    <string name="next_month_stable_giving">Next Month Stable Giving:</string>
    <string name="new_partner">New Partner</string>
    <string name="new_monthly_partner">New Monthly Partner</string>
    <string name="new_regular_partner">New Regular Partner</string>
    <string name="late_partner">Late Partner</string>
    <string name="restarted_partner">Restarted Partner</string>
    <string name="lapsed_partner">Lapsed Partner</string>
    <string name="dropped_partner">Dropped Partner</string>
    <string name="amount_change">Amount Change</string>
    <string name="special_gift">Special Gift</string>
    <string name="partner_continued">Continued</string>
    <string name="change_type">Change Type</string>
    <string name="checking_login">Checking Login</string>
    <string name="connecting_server">Connecting to dataserver</string>
    <string name="please_wait">Please Wait</string>
    <string name="login_error">Login error, please verify your credentials</string>
    <string name="connect_server_error">Error connecting to server, it seems that this service is not valid</string>
    <string name="account_verified">Account Verified</string>
    <string name="assigned_monthly">Assigned to monthly. Expires in 3 months.</string>
    <string name="assigned_annual">Assigned to annual. Expires in 14 months.</string>
    <string name="assigned_quarterly">Assigned to quarterly. Expires in 6 months.</string>
    <string name="no_phone_number">No phone number available for this contact.</string>
    <string name="regenerating_graph">Regenerating graph...</string>
    <string name="make_monthly">This is monthly</string>
    <string name="make_quarterly">This is quarterly</string>
    <string name="make_semi_annual">This is semi annual</string>
    <string name="make_annual">This is annual</string>
    <string name="click_me">Click Card Titles</string>
    <string name="click_tutorial">Click on the header of any card in a stack to bring it forward. Hit the ? icon in the top right for more info about any screen.</string>
    <string name="swipe_me">Swipe Me Away</string>
    <string name="swipe_tutorial">You can swipe away notification cards when you\'re done with them, or leave them as a reminder to follow-up with a partner.</string>
    <string name="help_main_title">Home Screen</string>
    <string name="help_main"> This screen shows a summary of your recent donation activity.\n\nThe bar graph gives a month-by-month summary, where blue is monthly gifts, red is special (one-time or occasional) gifts, and orange is regular non-monthly gifts (quarterly, anual, etc.) Light yellow indicates gifts from frequent, but irregular, donors.\n\nThe Monthly Averages are calculated over the last year, and \"stable monthly\" and \"stable regular\" giving count only current partners (they exclude late and lapsed partners).\n\nYou can click notifications to show details about the donor they\'re related to, and swipe them away when you don\'t need them anymore.</string>
    <string name="help_contact_list_title">The Contact List</string>
    <string name="pref_updating">Updating and notifications</string>
    <string name="pref_experimental">Experimental features and settings</string>
    <string name="pref_notify_office_hours">Notifications during office hours</string>
    <string name="pref_notify_office_hours_summary">Only notify of changes from 9 to 5 on weekdays</string>
    <string name="pref_update_frequency">Update Frequency</string>
    <string name="pref_update_frequency_summary">How many days between updates?</string>
    <string name="pref_debug_enabled">Debug Enabled</string>
    <string name="pref_debug_enabled_summary">Enables access to debugging options (WARNING: HERE BE DRAGONS)</string>
    <string name="pref_message_templates_enabled">Message Templates</string>
    <string name="pref_message_templates_enabled_summary">Allows the user to create a library of template emails to make communications faster</string>
</resources>