<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/add_phone" 
        android:icon="@drawable/cellphone_android" 
        android:showAsAction="never" 
        android:title="@string/Phone" 
        android:visible="true"></item>
    <item android:id="@+id/add_email" 
        android:icon="@drawable/at" 
        android:showAsAction="never" 
        android:title="@string/Email" 
        android:visible="true"></item>
    <item android:id="@+id/add_address" 
        android:icon="@drawable/home" 
        android:showAsAction="never" 
        android:title="@string/Address" 
        android:visible="true"></item>
    <item android:id="@+id/menu_gift_history" 
        android:icon="@drawable/gift" 
        android:showAsAction="never" 
        android:title="@string/gift_history" 
        android:visible="true"></item>
    <item android:id="@+id/menu_evaluate" 
        android:icon="@drawable/android_debug_bridge" 
        android:showAsAction="never" 
        android:title="@string/evaluate" 
        android:visible="true"></item>
    <item android:id="@+id/menu_notes" 
        android:icon="@drawable/note_plus" 
        android:showAsAction="never" 
        android:title="@string/edit_notes" 
        android:visible="true"></item>

</menu>
