<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <TextView
            android:text="@string/template_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:textColor="#707070"
            android:textSize="7pt"
            />
        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="#707070"
            android:textSize="7pt" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <TextView
            android:text="@string/email_subject"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:textColor="#707070"
            android:textSize="7pt"
            />
        <EditText
            android:id="@+id/email_subject"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="#707070"
            android:textSize="7pt" />
    </LinearLayout>
    <TextView
        android:text="@string/email_body"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:textColor="#707070"
        android:textSize="7pt"
        />

    <EditText 
        android:id="@+id/email_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:singleLine="false"
        android:lines="8"
        android:paddingLeft="@dimen/list_padding"
        android:paddingRight="@dimen/list_padding" />
</LinearLayout>
