<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" 
        android:background="@color/app_primary"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            />
        <net.bradmont.openmpd.views.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/huge_text"
            android:text="@string/importing"
            android:layout_marginBottom="@dimen/card_spacing"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <net.bradmont.openmpd.views.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            android:text="@string/importing_data_body"
            android:layout_marginBottom="@dimen/card_spacing"
            android:layout_marginLeft="@dimen/slidingmenu_offset"
            android:layout_marginRight="@dimen/slidingmenu_offset"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <net.bradmont.openmpd.views.NoScrollListView
            android:id="@+id/account_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="@dimen/slidingmenu_offset"
            android:layout_marginRight="@dimen/slidingmenu_offset"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            />
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:background="@color/app_primary"
            android:layout_marginBottom="@dimen/card_spacing"
            android:layout_marginLeft="@dimen/slidingmenu_offset"
            android:layout_marginRight="@dimen/slidingmenu_offset"
            android:gravity="center">
            <net.bradmont.openmpd.views.FontTextView
                android:id="@+id/eval_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text"
                android:text="@string/evaluating_contacts"
                />
            <net.bradmont.openmpd.views.FontTextView
                android:id="@+id/import_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_text"
                />

            <ProgressBar
                  android:id="@+id/eval_progressbar"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  style="?android:attr/progressBarStyleHorizontal"
                  android:layout_marginRight="5dp" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="6"
            />

</LinearLayout>

